Linking to login and register from landing done

--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -3,8 +3,10 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 100vh; /* Adjust the height as needed */
+    margin-top: -700px; /* Adjust the margin-top to move it further up */
 }
+
 
 .login-form {
     background-color: #f9f9f9;
